@@ -34,37 +34,37 @@ HylaFAX since the project was moved to hylafax.org (November 1998):
 Alvaro Aguilera      Andre Albsmeier      a.pogoda@web.de
 Ronald Appelfelder   Heinz-Ado Arnolds    Jay Ashworth
 Abramo Bagnara       Chris Bainbridge     Charly Baker
-Toki Barron          Stephan Bauer        Dmitry Bely
-Thomas Biege         David Birnbaum       Trevor Blackwell
-Siegfried Bosch      Marc Boucher         Ross Boylan
-Frank Brock          Glen Burkhardt       Yves Carlier
-Ed Casas             Jonathon Chen        Robert Colquhoun
-Ken Cornetet         Seth Cuaiklin        Albert DeKnuydt
-Paul Eggert          Juergen Fischer      Kevin Fleming
-John Florian         Patrice Fournier     Vyacheslav Frolov
-John Gilman          Kris Henderson       Sascha Herrmann
-Carsten Hoeger       Lee Howard           John Interrante
-Damiam Ivereigh      Bernard Jech         Nico Kadel-Garcia
-Sean Kamath          Jonathan Kamens      Dimitry Ketov
-Steffan Klipsch      Hannu Koivisto       Arjen de Korte
-Ken Lalonde          Ilguiz Latypov       Rob Leadbeater
-Guillaume Legoupil   Greg Luck            Lionel Mamane
-Pierluigi Mangani    Campbell McKilligan  Bodo Meissner
-John Miller          Aldo Mini            Boris Mironov        
-Seth Mos             Darren Nickerson     Andrea Nicolini      
-Giulio Orsero        Chris Parsons        Michael Pedersen     
-John Perkins         Simon Perry          Frank Peters         
-Vu Pham              John Patrick Poet    Harald Pollack       
-Andreas Pretzsch     Bernd Proissl        Matthew Rice         
-Tim Rice             Daniel Robbins       Giuseppe Sacco       
-Michael Salzmann     Sven Schmidt         John Sellens         
-Simon <iahnl@iah.nl> Vilmos Soti          Alan Sparks          
-Andy Sparrow         Marco Steinacher     Iain Stevenson       
-Marius Strobl        Kazuhide Takahashi   Daryl Thachuk        
-Steve Tuckner        Aidan Van Dyk        Norbert Warmuth      
-Phil Watkinson       James Werkowski      Chas Williams        
-John Williams        Steve Williams       John Wolfe           
-Bill Young           Bruce Young
+Toki Barron          Stephan Bauer        George Bell
+Dmitry Bely          Thomas Biege         David Birnbaum       
+Trevor Blackwell     Siegfried Bosch      Marc Boucher         
+Ross Boylan          Frank Brock          Glen Burkhardt       
+Yves Carlier         Ed Casas             Jonathon Chen        
+Robert Colquhoun     Ken Cornetet         Seth Cuaiklin        
+Albert DeKnuydt      Paul Eggert          Juergen Fischer      
+Kevin Fleming        John Florian         Patrice Fournier     
+Vyacheslav Frolov    John Gilman          Kris Henderson       
+Sascha Herrmann      Carsten Hoeger       Lee Howard           
+John Interrante      Damiam Ivereigh      Bernard Jech         
+Nico Kadel-Garcia    Sean Kamath          Jonathan Kamens      
+Dimitry Ketov        Steffan Klipsch      Hannu Koivisto       
+Arjen de Korte       Ken Lalonde          Ilguiz Latypov       
+Rob Leadbeater       Guillaume Legoupil   Greg Luck            
+Lionel Mamane        Pierluigi Mangani    Campbell McKilligan  
+Bodo Meissner        John Miller          Aldo Mini            
+Boris Mironov        Seth Mos             Darren Nickerson     
+Andrea Nicolini      Giulio Orsero        Chris Parsons        
+Michael Pedersen     John Perkins         Simon Perry          
+Frank Peters         Vu Pham              John Patrick Poet    
+Harald Pollack       Andreas Pretzsch     Bernd Proissl        
+Matthew Rice         Tim Rice             Daniel Robbins       
+Giuseppe Sacco       Michael Salzmann     Sven Schmidt         
+John Sellens         Simon <iahnl@iah.nl> Vilmos Soti          
+Alan Sparks          Andy Sparrow         Marco Steinacher     
+Iain Stevenson       Marius Strobl        Kazuhide Takahashi   
+Daryl Thachuk        Steve Tuckner        Aidan Van Dyk        
+Norbert Warmuth      Phil Watkinson       James Werkowski      
+Chas Williams        John Williams        Steve Williams       
+John Wolfe           Bill Young           Bruce Young
 
 We appreciate and recognize the upstreamed contributions from these 
 distributions:
